# XCameraView

./: build.gradle  config.gradle  gradle.properties  settings.gradle
ImageLib/: CMakeLists.txt  build.gradle  proguard-rules.pro
ImageLib/src/main/: AndroidManifest.xml
ImageLib/src/main/cpp/: log.h  main.cpp  yuv_decoder.cpp  yuv_decoder.h
ImageLib/src/main/cpp/image/: Graphics.h  Image.cpp  Image.h  ImageMatrix.cpp  ImageMatrix.h  NinePatchPeeker.h
ImageLib/src/main/java/xyz/openhh/imagecore/: Image.java  ImageMatrix.java
ImageLib/src/main/res/values/: strings.xml
OpenCV/: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/xyz/openhh/xcameraview/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CvUtils.cpp  Mat.cpp  native-lib.cpp
app/src/main/java/xyz/openhh/xcameraview/: BitmapHelper.java  CameraGLSurfaceView.java  CameraHelper.java  CameraSurfaceView.java  DirectDrawer.java  ICameraView.java  MainActivity.java  OptListener.java  PermissionsManager.java  PicPreAct.java  RecordButton.java
app/src/main/java/xyz/openhh/xcameraview/opencv/: CvException.java  CvType.java  Mat.java  Point.java  Point3.java  Range.java  Rect.java  Scalar.java  Size.java  Utils.java
app/src/main/res/layout/: activity_main.xml  activity_pic_pre.xml
app/src/main/res/values/: strings.xml
app/src/test/java/xyz/openhh/xcameraview/: ExampleUnitTest.java
docs/: Build.md  build_cv.sh
imagecore/: CMakeLists.txt
imagecore/src/androidTest/java/xyz/openhh/imagecore/: ExampleInstrumentedTest.java
imagecore/src/main/cpp/: ImageData.h  JniHelper.cpp  JniHelper.h
imagecore/src/main/cpp/image/: CreateJavaOutputStreamAdaptor.cpp  CreateJavaOutputStreamAdaptor.h  Image.cpp  Image.h  ImageMatrix.cpp  ImageMatrix.h  NinePatchPeeker.cpp  skia_main.cpp
imagecore/src/main/cpp/image/skia/include/config/: SkUserConfig.h
imagecore/src/main/java/xyz/openhh/imagecore/: Image.java  ImageMatrix.java
imagecore/src/test/java/xyz/openhh/imagecore/: ExampleUnitTest.java
